scripts/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway 
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 31023
    protocol: HTTP
