scripts/dns.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: dns-over-tcp-route
  namespace: powerdns
spec:
  parentRefs:
    - name: dns-gateway
      namespace: powerdns
      sectionName: dns-over-tcp
  rules:
    - backendRefs:
        - name: dnsdist
          port: 53
