scripts/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 13.60.32.149/24
    ports:
    - protocol: TCP
      port: 5432
